--- a/css/style.css
+++ b/css/style.css
@@ -4,19 +4,8 @@ body {
     background-color: skyblue;
 }
 
-#book {
-  display: block;
-}
-
-#book-bg {
-  width: 100vw;
-  display: block;
-  position: absolute;
-  z-index: -1;
-}
-
 /*Book mark bar*/
-ul {
+nav ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
@@ -25,54 +14,66 @@ ul {
     display: flex;
     justify-content: space-around;
     margin-top: 50px;
-  }
-
-  li {
-    float: left;
-  }
-  
-  li a {
-    display: block;
-    flex-grow: 1;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    border: black;
-    border-width: 2px;
-    background-color:red;
-  }
-  
-  li a:hover {
-    background-color: #111;
-  }
-  
-  .active {
-    background-color: #04AA6D;
-  }
-
-
-  /* For making pages*/
-* {
-    box-sizing: border-box;
 }
 
-.pages {
+nav li {
+  float: left;
+}
+
+nav li a {
+  display: block;
+  flex-grow: 1;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  border: black;
+  border-width: 2px;
+  background-color:red;
+}
+
+nav li a:hover {
+  background-color: #111;
+}
+
+nav .active {
+  background-color: #04AA6D;
+}
+
+/* The book, and everything inside it */
+
+#book {
+  display: inline-block;
+  position: absolute;
+  width: 90%;
+  left: 5%;
+  margin-bottom: 50px;
+}
+
+#book-bg {
+  display: block;
+  position: absolute;
+  z-index: -1;
+  width: 100%;
+  height: auto;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#pages {
     display: flex;
 }
 
-.pages > * {
-    /* off white */
-    flex:50%;
+#pages > #leftpage,#rightpage {
+    flex: 50%;
     border: 3px solid black;
-    height: 500px;
+    height: 870px;
     padding: 20px;
-    margin-bottom: 50px;
 }
 
-/*front page*/
+/* Front page */
 #front {
-    margin:auto;
+    margin: auto;
     display: block;
     width: 30%;
     height: 500px;
@@ -80,24 +81,35 @@ ul {
 
 strong {
     text-align: center;
-    display:block;
+    display: block;
 }
 
 #cert {
-    margin:auto;
+    margin: auto;
     display: block;
     width: 60%;
     height: 500px;
 }
 
-.pages .button_prev{
-  position:absolute;
-  left:2%;
-  bottom:1%;
+/* Navigation buttons */
+
+#pages button {
+  display: block;
 }
 
-.pages .button_next{
-  position:absolute;
-  left:95%;
-  bottom:1%;
+#button-prev {
+  position: absolute;
+  left: 20px;
+  bottom: 20px;
+}
+
+#button-next {
+  position: absolute;
+  right: 20px;
+  bottom: 20px;
+}
+
+/* Footer */
+footer {
+  height: 50px;
 }
