Exit Button colour change
Changed the exit button to red.
Has a low opacity which thickens when hovered

--- a/css/game.css
+++ b/css/game.css
@@ -10,6 +10,12 @@ body{
   
 #exit_button {
     position: absolute;
+    opacity: 0.75;
+    background-color: red;
     right: 20px;
     top: 20px;
   }
+
+#exit_button:hover {
+    opacity: 1;
+}
