--- a/css/game.css
+++ b/css/game.css
@@ -4,8 +4,8 @@ body{
 #game_bg {
     background-image: url("images/grass.jpg");
     height: 100%;
-/*     background-position: center;
-    background-size: cover; */
+    background-position: center;
+    background-size: cover;
   }
   
 #exit_button {
