--- a/css/game.css
+++ b/css/game.css
@@ -19,3 +19,19 @@ body{
 #exit_button:hover {
     opacity: 1;
 }
+
+#box {
+    width: 200px;
+    height: 100px;
+    position: absolute;
+    left: 40%;
+    bottom: 50px;
+}
+
+#sandbag {
+    width: 150px;
+    height: 200px;
+    position: absolute;
+    right: 40px;
+    bottom: 50px;
+}
