--- a/css/game.css
+++ b/css/game.css
@@ -22,15 +22,18 @@ body{
 
 #box {
     width: 200px;
-    height: 100px;
+    height: 120px;
+    padding: 10px;
     position: absolute;
     left: 40%;
     bottom: 50px;
+    outline: 2px solid black;
+    background-color: grey;
 }
 
 #sandbag {
     width: 150px;
-    height: 200px;
+    height: 80px;
     position: absolute;
     right: 40px;
     bottom: 50px;
