--- a/css/game.css
+++ b/css/game.css
@@ -38,3 +38,25 @@ body{
     right: 40px;
     bottom: 50px;
 }
+
+#cont {
+    width:150px;
+    height: 100px;
+    position:absolute;
+    left: 40%;
+    bottom: 200px;
+    border: 3px solid yellow;
+    background-color: white;
+    display: none;
+}
+
+#cont:hover {
+    outline: 3px dotted yellow;
+    background-color: yellow;
+}
+#cont_text {
+    display: block;
+    text-align: center;
+    color:red;
+    font-size: medium;
+}
