--- a/css/style.css
+++ b/css/style.css
@@ -43,14 +43,14 @@ nav .active {
 /* The book, and everything inside it */
 #book-container {
   position: static; /* Needed so that the footer can appear below this section */
-  height: 910px;
+  height: 56.76vw;
 }
 
 #book {
   display: block;
   position: absolute;
-  width: 90%;
-  height: 910px;
+  width: 90vw;
+  height: 56.76vw;
   left: 5%;
 }
 
@@ -65,14 +65,23 @@ nav .active {
 }
 
 #pages {
-    display: flex;
-    height: 100%;
+  display: flex;
+  height: 100%;
 }
 
 #pages > #leftpage,#rightpage {
-    flex: 50%;
-    border: 3px solid black;
-    padding: 20px;
+  flex: 50%;
+  border: 1px solid #aaaaaa; /*  FOR DEBUGGING */
+  padding-top: 3%;
+  padding-bottom: 3%;
+}
+
+#leftpage {
+  padding-left: 4%;
+}
+
+#rightpage {
+  padding-right: 4%;
 }
 
 /* Navigation buttons */
@@ -83,14 +92,14 @@ nav .active {
 
 #button-prev {
   position: absolute;
-  left: 20px;
-  bottom: 20px;
+  left: 4%;
+  bottom: 4%;
 }
 
 #button-next {
   position: absolute;
-  right: 20px;
-  bottom: 20px;
+  right: 4%;
+  bottom: 4%;
 }
 
 /* Footer */
