--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ nav ul {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color:rebeccapurple;
+    border: 1px solid #aaaaaa; /*  FOR DEBUGGING */
     display: flex;
     justify-content: space-around;
     margin-top: 50px;
@@ -23,13 +23,13 @@ nav li {
 nav li a {
   display: block;
   flex-grow: 1;
-  color: white;
+  color: #333;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
   border: black;
   border-width: 2px;
-  background-color:red;
+  background-color:rgb(221, 236, 0);
 }
 
 nav li a:hover {
@@ -71,7 +71,7 @@ nav .active {
 
 #pages > #leftpage,#rightpage {
   flex: 50%;
-  border: 1px solid #aaaaaa; /*  FOR DEBUGGING */
+  border: 1px solid #aaa; /*  FOR DEBUGGING */
   padding-top: 3%;
   padding-bottom: 3%;
 }
