--- a/css/map.css
+++ b/css/map.css
@@ -1,8 +1,7 @@
-#map{
+#map {
     padding: 1%;
-    width: 100%; 
-    height: 500px;
-    margin:auto;
+    margin: auto;
     display: block;
-  }
+    max-height: 100%;
+}
   
