Article_p2 small updates
Filled in some details in article_p2
Set font size for book to be 19px

--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,7 @@ nav .active {
 #book-container {
   position: static; /* Needed so that the footer can appear below this section */
   height: 56.76vw;
+  font-size: 19px;
 }
 
 #book {
