--- a/css/style.css
+++ b/css/style.css
@@ -105,7 +105,11 @@ nav .active {
   bottom: 4%;
 }
 
-/* Footer */
+
+h1 {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+  /* Footer */
 footer {
   height: 50px;
 }
