--- a/css/game.css
+++ b/css/game.css
@@ -29,6 +29,7 @@ body{
     bottom: 50px;
     outline: 2px solid black;
     background-color: grey;
+    color: white;
 }
 
 #sandbag {
@@ -36,6 +37,36 @@ body{
     height: 80px;
     position: absolute;
     right: 40px;
+    bottom: 50px;
+}
+
+#among_us {
+    position: absolute;
+    height: 100px;
+    width: 100px;
+    right: 300px;
+    bottom: 50px;
+}
+
+#bernie {
+    position: absolute;
+    left: 40px;
+    bottom: 50px;
+}
+
+#dog_girl {
+    height: 150px;
+    width: 100px;
+    position: absolute;
+    left: 320px;
+    bottom: 50px;
+}
+
+#fruits {
+    height: 100px;
+    width: 100px;
+    position: absolute;
+    left:200px;
     bottom: 50px;
 }
 
