--- a/css/game.css
+++ b/css/game.css
@@ -2,7 +2,7 @@ body{
     background-color: skyblue;
 }
 #game_bg {
-    background-image: url("images/grass.jpg");
+    /* background-image: url("images/grass.png"); */
     height: 100%;
     background-position: center;
     background-size: cover;
