--- a/css/game.css
+++ b/css/game.css
@@ -2,10 +2,10 @@ body{
     background-color: skyblue;
 }
 #game_bg {
-    /* background-image: url("images/grass.png"); */
-    height: 100%;
-    background-position: center;
-    background-size: cover;
+    display: block;
+    width: 95vw;
+    margin-left: auto;
+    margin-right: auto;
   }
   
 #exit_button {
