--- a/css/map.css
+++ b/css/map.css
@@ -1,11 +1,7 @@
 #map {
-    padding: 5%;
-    position: absolute;
+    /* padding: 5%; */
     margin: auto;
     display: block;
-    left: 0;
-    top:0;
-    max-height: 80%;
-    max-width: 100%;
+    height: 95%;
 }
   
