--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,11 @@
+h1, p, a, figcaption {
+    font-family: 'Courier New', Courier, monospace;
+}
+
+h1 {
+  margin-top: 0;
+  margin-bottom: 10px;
+}
 
 body {
     /*background-image: url("images/grass.png");*/
@@ -70,13 +78,21 @@ nav .active {
 #pages {
   display: flex;
   height: 100%;
+  width: 100%;
+}
+
+#pages.spread {
+  display: inline-block;
 }
 
 #pages > #leftpage,#rightpage,#pagespread {
-  flex: 50%;
-  /* border: 1px solid #aaa; FOR DEBUGGING */
   padding-top: 3%;
   padding-bottom: 3%;
+}
+
+#pages > #leftpage,#rightpage {
+  flex: 50%;
+  /* border: 1px solid #aaa; FOR DEBUGGING */
 }
 
 #leftpage {
@@ -86,6 +102,14 @@ nav .active {
 
 #rightpage {
   padding-left: 2%;
+  padding-right: 4%;
+}
+
+#pagespread {
+  display: inline-block;
+  height: 94%;
+  width: 92%;
+  padding-left: 4%;
   padding-right: 4%;
 }
 
@@ -107,11 +131,7 @@ nav .active {
   bottom: 4%;
 }
 
-
-h1 {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-  /* Footer */
+/* Footer */
 footer {
   height: 50px;
 }
