--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,9 @@
-h1, p, a, figcaption {
+h1, h2, p, a, figcaption {
     font-family: 'Courier New', Courier, monospace;
 }
 
-h1 {
-  margin-top: 0;
-  margin-bottom: 10px;
+h1, h2 {
+  margin: 0;
 }
 
 body {
@@ -21,7 +20,6 @@ nav ul {
     /*border: 1px solid #aaaaaa; /*  FOR DEBUGGING */
     display: flex;
     justify-content: space-around;
-    margin-top: 50px;
 }
 
 nav li {
