Added files for article2
Added php, js and css files for article 2

--- a/css/game.css
+++ b/css/game.css
@@ -38,6 +38,11 @@ body{
     position: absolute;
     right: 40px;
     bottom: 50px;
+    border : 5px transparent;
+}
+
+#sandbag:hover {
+    border : 5px yellow solid;
 }
 
 #among_us {
