--- a/css/intro.css
+++ b/css/intro.css
@@ -6,7 +6,34 @@
     align-items: center;
 }
 
-#username-entry > * {
-    margin-top: 10px;
-    margin-bottom: 10px;
+#enterName input, .introMessage, .nameInput, button{
+    font-family: 'Courier New', Courier, monospace;
+}
+
+#enterName input{
+    border: 0;
+    background-color: #e7ebec;
+    border-width:0px;
+    border:none;
+    float: left;
+    margin: 0 5% 0 5%;
+    padding: 5%
+}
+
+.p1{
+    font-weight: bolder;
+    padding-left: 10%;
+    font-size: 35px;
+    text-decoration: underline;
+}
+
+.introMessage{
+    padding: 10% 12% 0 12%;
+    font-size: medium;
+}
+
+.nameInput{
+    padding: 35% 15% 0 12%;
+    font-size: 15px;;
+
 }
