--- a/css/game.css
+++ b/css/game.css
@@ -20,19 +20,32 @@ body{
     opacity: 1;
 }
 
-#box {
-    width: 200px;
-    height: 120px;
+#box1 {
+    width: 440px;
+    height: 200px;
     padding: 10px;
     position: absolute;
-    left: 40%;
-    bottom: 50px;
+    left: 65%;
+    bottom: 50%;
     outline: 2px solid black;
-    background-color: grey;
-    color: white;
+    background-color: transparent;
+    color: black;
+    text-align: center;
 }
 
-#sandbag {
+#box2 {
+    width: 440px;
+    height: 100px;
+    padding: 10px;
+    position: absolute;
+    left: 65%;
+    bottom: 50%;
+    outline: 4px solid red;
+    background-color: transparent;
+    display: none;
+}
+
+#sandbag1 {
     width: 150px;
     height: 80px;
     position: absolute;
@@ -41,8 +54,17 @@ body{
     border : 5px transparent;
 }
 
-#sandbag:hover {
+#sandbag1:hover {
     border : 5px yellow solid;
+}
+
+#sandbag2 {
+    width: 150px;
+    height: 80px;
+    position: absolute;
+    right: 100px;
+    bottom: 120px;
+    border : 5px transparent;
 }
 
 #among_us {
@@ -52,6 +74,15 @@ body{
     right: 300px;
     bottom: 50px;
 }
+
+#plastic_sheeting {
+    width: 15%;
+    height: 15%;
+    position: absolute;
+    left: 100px;
+    bottom: 250px;
+}
+
 
 #bernie {
     position: absolute;
@@ -75,14 +106,27 @@ body{
     bottom: 50px;
 }
 
+#plastic_cover {
+    width: 535px;
+    height: 150px;
+    position: absolute;
+    left: 62%;
+    bottom: 50%;
+    background-image: url('../images/plastic_cover.png');
+    background-repeat: no-repeat;
+    background-size: 100%;
+    display: none;
+}
+
 #cont {
-    width:150px;
+    width: 200px;
     height: 100px;
-    position:absolute;
-    left: 40%;
-    bottom: 200px;
-    border: 3px solid yellow;
-    background-color: white;
+    position: absolute;
+    left: 45%;
+    bottom: 53%;
+    color: black;
+    outline: 4px solid black;
+    text-align: center;
     display: none;
 }
 
@@ -93,6 +137,35 @@ body{
 #cont_text {
     display: block;
     text-align: center;
-    color:red;
-    font-size: medium;
+    color:black;
+    font-size: large;
 }
+
+#scrapMessage {
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.4);
+  }
+
+  #scrap{
+    padding: 20% 0 0 29%;
+  }
+
+  .scrapText{
+      position: absolute;
+      text-align: center;
+      margin: -15% 0 0 35%;
+      width: 30%;
+  }
+  
+  #close{
+      float: right;
+  }
+
+  #close:hover{
+      cursor: pointer;
+  }
