--- a/css/game.css
+++ b/css/game.css
@@ -128,6 +128,7 @@ body{
     outline: 4px solid black;
     text-align: center;
     display: none;
+    background-color: rgba(255, 255, 0, 0.8);
 }
 
 #cont:hover {
@@ -139,6 +140,7 @@ body{
     text-align: center;
     color:black;
     font-size: large;
+    transform: translate(0, 50%);
 }
 
 #scrapMessage {
