--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ nav ul {
 }
 
 nav li {
-  float: left;
+    float: left;
 }
 
 nav li a {
@@ -31,6 +31,7 @@ nav li a {
     flex-grow: 1;
     color: #333;
     text-align: center;
+    min-width: 80px;
     padding: 14px 16px;
     text-decoration: none;
     border: black;
