--- a/css/game.css
+++ b/css/game.css
@@ -49,8 +49,8 @@ body{
     width: 10%;
     height: 10%;
     position: absolute;
-    right: 40px;
-    bottom: 50px;
+    right: 10%;
+    bottom: 5%;
     border : 5px transparent;
 }
 
@@ -62,8 +62,8 @@ body{
     width: 10%;
     height: 10%;
     position: absolute;
-    right: 100px;
-    bottom: 120px;
+    right: 25%;
+    bottom: 20%;
     border : 5px transparent;
 }
 
@@ -158,6 +158,7 @@ body{
   .scrapText{
       position: absolute;
       text-align: center;
+      bottom: 18%;
       margin: -15% 0 0 35%;
       width: 30%;
   }
