--- a/css/game.css
+++ b/css/game.css
@@ -50,12 +50,12 @@ body{
     height: 10%;
     position: absolute;
     right: 10%;
-    bottom: 5%;
+    bottom: 30%;
     border : 5px transparent;
 }
 
 #sandbag1:hover {
-    border : 5px yellow solid;
+    border : 4px yellow solid;
 }
 
 #sandbag2 {
@@ -65,6 +65,10 @@ body{
     right: 25%;
     bottom: 20%;
     border : 5px transparent;
+}
+
+#sandbag2:hover {
+    border: 4px yellow solid;
 }
 
 #sandbag1_placed {
@@ -100,8 +104,12 @@ body{
     width: 15%;
     height: 15%;
     position: absolute;
-    left: 100px;
-    bottom: 250px;
+    left: 10%;
+    bottom: 30%;
+}
+
+#plastic_sheeting:hover {
+    border: 4px yellow solid;
 }
 
 
