--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ body {
 
 /*Book mark bar*/
 nav {
-    width: 90vw;
+    width: 70vw;
     margin-top: 10px;
     margin-left: auto;
     margin-right: auto;
@@ -58,16 +58,16 @@ nav .active {
 /* The book, and everything inside it */
 #book-container {
     position: static; /* Needed so that the footer can appear below this section */
-    height: 56.76vw;
+    height: 44.15vw;
     font-size: 18px;
 }
 
 #book {
     display: block;
     position: absolute;
-    width: 90vw;
-    height: 56.76vw;
-    left: 5%;
+    width: 70vw;
+    height: 44.15vw; /* Book image aspect ratio x 75vw */
+    left: 15%; /* (100 - width) / 2 */
     box-shadow: 0 10px 15px 0 #333;
 }
 
