Map help button

--- a/css/article1P3.css
+++ b/css/article1P3.css
@@ -4,3 +4,31 @@
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
+#scrapMessage {
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.4);
+  }
+
+  #scrap{
+    padding: 20% 0 0 29%;
+  }
+
+  .scrapText{
+      position: absolute;
+      text-align: center;
+      margin: -15% 0 0 35%;
+      width: 30%;
+  }
+  
+  #close{
+      float: right;
+  }
+
+  #close:hover{
+      cursor: pointer;
+  }
