--- a/css/map.css
+++ b/css/map.css
@@ -9,10 +9,30 @@
     height: 100%;
     margin-left: auto;
     margin-right: auto;
-    padding-top: 20px;
+}
+
+#title{
+  padding-bottom: 3%;
+}
+
+#title button{
+  width: 20px;
+  position: absolute;
+  top: 29px;
+  left: 245px;
+  padding: 0;
+  background-color: rgba(255, 255, 255, 0);
+  border-radius: 50px;
+  border: 0;
+  box-shadow: 0 0 0;
+}
+
+#help{
+  width: 100%;
 }
 
 #scrapMessage {
+    display: none;
     position: fixed;
     z-index: 1;
     left: 0;
@@ -73,19 +93,19 @@
 
   #ch1{
       background-color: red;
-      top:67%;
+      top:71%;
       left:20%
   }
 
   #ch2{
     background-color: rgb(132, 210, 255);
-    top:54.5%;
+    top:59.5%;
     left:35%
       
   }
   #ch3{
     background-color: rgb(201, 201, 181);
-    top:47%;
+    top:51.5%;
     left:50%
         
   }
@@ -97,7 +117,7 @@
   }
   #ch5{
     background-color: rgb(177, 169, 171);
-    top:13.5%;
+    top:17%;
     left:80%
 }
 
