--- a/css/gallery.css
+++ b/css/gallery.css
@@ -9,3 +9,37 @@
     box-shadow: 5px 5px 10px brown;
     border: 1px solid brown;
 }
+
+#gallery-images {
+    display: flex;
+    flex-wrap: wrap;
+    align-content: flex-start;
+}
+
+#gallery-images .record {
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+}
+
+#gallery-images img {
+    height: 200px;
+    width: 355.56px;
+    box-shadow: 2px 2px 5px gray;
+    background: rgba(200, 200, 200, 0.6);
+    padding: 10px;
+}
+
+#gallery-images figcaption.hidden {
+    display: none;
+    /* position: relative; */
+    width: 355.56px;
+    padding: 10px;
+    margin-top: 10px;
+    background: blue;
+    color: white;
+}
+
+#gallery-images img:hover + figcaption.hidden {
+    display: block;
+}
