--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ body {
 /*Book mark bar*/
 nav {
     width: 70vw;
-    margin-top: 10px;
+    margin-top: 30px;
     margin-left: auto;
     margin-right: auto;
 }
@@ -161,4 +161,12 @@ footer {
 
 mark{
     cursor: help;
+}
+
+footer {
+    padding-top: 30px;
+    padding-left: 20px;
+    padding-right: 20px;
+    display: flex;
+    justify-content: space-between;
 }
