--- a/css/gallery.css
+++ b/css/gallery.css
@@ -15,6 +15,8 @@
     display: flex;
     flex-wrap: wrap;
     align-content: flex-start;
+    height: 78%;
+    overflow-y: scroll;
 }
 
 #gallery-images .record {
