--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-h1, h2, p, a, figcaption, ul {
+h1, h2, p, a, figcaption, ul, button {
     font-family: 'Courier New', Courier, monospace;
 }
 
@@ -131,7 +131,7 @@ nav .active {
     border-radius: 5px;
     border: 0;
     padding: 10px;
-    width: 70px;
+    width: 90px;
     box-shadow: 2px 2px 5px grey;
 }
 
@@ -167,9 +167,11 @@ mark{
 }
 
 footer {
+    position: fixed;
+    width: 100vw;
+    bottom: 0;
     padding-top: 30px;
-    padding-left: 20px;
-    padding-right: 20px;
+
     display: flex;
     justify-content: space-between;
 
@@ -177,6 +179,13 @@ footer {
     background-image: linear-gradient(rgba(0, 0, 0, 0), black);
 
     color: white;
+}
+
+footer * {
+    padding-left: 10px;
+    padding-right: 10px;
+
+    color:white;
 }
 
 footer a {
