--- a/css/style.css
+++ b/css/style.css
@@ -28,12 +28,13 @@ nav ul {
     overflow: hidden;
     display: flex;
     justify-content: space-around;
+    overflow: visible; /* So the box shodows for the sticky notes do not get cut off */
 }
 
 nav li {
     display: block;
     float: left;
-    box-shadow: 0px -5px 5px #333;
+    box-shadow: 0px -2px 10px #333;
 }
 
 nav li a {
