collect scraps system

--- a/css/quiz.css
+++ b/css/quiz.css
@@ -1,6 +1,6 @@
-#win {
+/*#win {
 
-}
+}*/
 
 #get_cert{
   display: block;
@@ -9,4 +9,35 @@
   border: blue solid;
   background-color: turquoise;
   color: black;
+}
+
+#scrapMessage {
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,0.4);
+}
+
+#scrap{
+  padding: 20% 0 0 29%;
+}
+
+#scrapText{
+    position: absolute;
+    text-align: center;
+    margin: -15% 0 0 35%;
+    width: 30%;
+}
+
+#scrapText button{
+  width: 150px;
+  background-color: rgb(200, 211, 223);
+  margin-left: 25%;
+}
+
+#scrapText a{
+  text-decoration: none;
 }
