--- a/css/map.css
+++ b/css/map.css
@@ -91,36 +91,40 @@
     position: absolute;
   }
 
-  #ch1{
-      background-color: red;
-      top:71%;
-      left:20%
+
+  #ch1, #ch1Message{
+    background-color: rgb(231, 175, 20);
+    top:71%;
+    left:20%
   }
 
-  #ch2{
-    background-color: rgb(132, 210, 255);
+  #ch2, #ch2Message{
+    background-color: rgb(219, 165, 15) /*rgb(132, 210, 255)*/;
     top:59.5%;
     left:35%
       
   }
-  #ch3{
-    background-color: rgb(201, 201, 181);
+  #ch3, #ch3Message{
+    background-color: rgb(150, 130, 74)/*rgb(201, 201, 181);*/;
     top:51.5%;
     left:50%
         
   }
-  #ch4{
-    background-color: rgb(171, 185, 177);
+  #ch4, #ch4Message{
+    background-color: rgb(163, 141, 81)/*rgb(171, 185, 177);*/;
     top:41.5%;
     left:65%
 
   }
-  #ch5{
-    background-color: rgb(177, 169, 171);
+  #ch5, #ch5Message{
+    background-color: rgb(163, 141, 81)/*rgb(177, 169, 171);*/;
     top:17%;
     left:80%
 }
 
+#ch1Message, #ch2Message, #ch3Message, #ch4Message, #ch5Message{
+  background-color: white;
+}
 
 #pageSpread{
   position:relative;
