--- a/css/style.css
+++ b/css/style.css
@@ -171,7 +171,6 @@ footer {
     position: fixed;
     width: 100vw;
     bottom: 0;
-    padding-top: 30px;
 
     display: flex;
     justify-content: space-between;
@@ -182,7 +181,7 @@ footer {
     color: white;
 }
 
-footer * {
+footer > * {
     padding-left: 10px;
     padding-right: 10px;
 
