--- a/css/gallery.css
+++ b/css/gallery.css
@@ -1,10 +1,10 @@
-#db-queries {
+.db-queries {
     display: flex;
     list-style-type: none;
     padding: 0;
 }
 
-#db-queries li {
+.db-queries li {
     padding: 10px;
     margin: 10px;
     box-shadow: 5px 5px 10px brown;
