--- a/css/gallery.css
+++ b/css/gallery.css
@@ -7,8 +7,14 @@
 .db-queries li {
     padding: 10px;
     margin: 10px;
-    box-shadow: 5px 5px 10px brown;
-    border: 1px solid brown;
+    box-shadow: 5px 5px 10px rgb(77, 61, 15);
+    border: 1px solid rgba(77, 61, 15, 0.4);
+}
+
+.db-queries li:hover {
+    background: rgba(77, 61, 15, 0.4);
+    color: white;
+    cursor: pointer;
 }
 
 .gallery-images {
