--- a/css/about.css
+++ b/css/about.css
@@ -5,6 +5,8 @@ ul {
 
 li {
     /* Hanging indent */
-    padding-left: 20px ;
-    text-indent: -20px ;
+    padding-left: 20px;
+    text-indent: -20px;
+
+    margin-bottom: 10px;
 }
