--- a/css/game.css
+++ b/css/game.css
@@ -191,7 +191,7 @@ body{
   .scrapText{
       position: absolute;
       text-align: center;
-      bottom: 18%;
+      /* bottom: 18%; */
       margin: -15% 0 0 35%;
       width: 30%;
   }
