--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,8 @@ nav ul {
 nav li {
     display: block;
     float: left;
-    box-shadow: 0px -2px 10px #333;
+    box-shadow: 1px -4px 7px #333;
+
 }
 
 nav li a {
@@ -50,13 +51,9 @@ nav li a {
     background-color:rgb(221, 236, 0);
 }
 
-nav li a:hover {
+nav li a:hover, .active {
     background-color: red;
     color:white;
-}
-
-nav .active {
-    background-color: #04AA6D;
 }
 
 /* The book and everything inside it */
@@ -159,9 +156,6 @@ figcaption{
 }
 
 /* Footer */
-footer {
-    height: 50px;
-}
 
 mark{
     cursor: help;
@@ -170,6 +164,7 @@ mark{
 footer {
     position: fixed;
     width: 100vw;
+    height: 45px;
     bottom: 0;
 
     display: flex;
@@ -182,9 +177,7 @@ footer {
 }
 
 footer > * {
-    padding-left: 10px;
-    padding-right: 10px;
-
+    padding: 0.5% 5% 0% 5%;
     color:white;
 }
 
