Rewrote and integrated the website's progress tracker (except for the quiz)

--- a/css/quiz.css
+++ b/css/quiz.css
@@ -11,3 +11,15 @@
   color: black;
 }
 
+#papers-not-found.papersFound {
+  display: none;
+
+}
+
+#quiz-form.papersFound {
+  display: initial;
+}
+
+#quiz-form {
+  display: none;
+}
