Added icons to display how many scraps remaining if the user attempts to take the quiz early

--- a/css/quiz.css
+++ b/css/quiz.css
@@ -11,6 +11,12 @@
   color: black;
 }
 
+#papers-not-found img {
+  max-width: 120px;
+  max-height: 120px;
+  margin: 10px;
+}
+
 #papers-not-found.papersFound {
   display: none;
 
