--- a/css/style.css
+++ b/css/style.css
@@ -10,9 +10,25 @@ h1, h2, h3 {
     margin-bottom: 15px;
 }
 
+h1 {
+    font-size: 1.3em;
+}
+
+h2 {
+    font-size: 1.1em;
+}
+
+h3 {
+    font-size: 1em;
+}
+
 p {
     margin-top: 10px;
     margin-bottom: 15px;
+}
+
+p, li, label {
+    font-size: 0.8em;
 }
 
 body {
