--- a/css/map.css
+++ b/css/map.css
@@ -15,20 +15,16 @@
   padding-bottom: 1%;
 }
 
-#title button{
+#help {
+  display: inline;
+  float: right;
   width: 20px;
-  position: absolute;
-  top: 29px;
-  left: 245px;
-  padding: 0;
   background-color: rgba(255, 255, 255, 0);
   border-radius: 50px;
-  border: 0;
-  box-shadow: 0 0 0;
 }
 
-#help{
-  width: 100%;
+#help:hover {
+  cursor: pointer;
 }
 
 #scrapMessage {
@@ -40,85 +36,85 @@
     width: 100%;
     height: 100%;
     background-color: rgba(0,0,0,0.4);
-  }
-
-  #scrap{
-    padding: 20% 0 0 29%;
-  }
-
-  .scrapText{
-      position: absolute;
-      text-align: center;
-      margin: -15% 0 0 35%;
-      width: 30%;
-  }
-  
-  #close{
-      float: right;
-  }
-
-  #close:hover{
-      cursor: pointer;
-  }
- 
-  .mapPoints{
-    display: flex;
-    position: absolute;
-  }
-
-  a:hover #ch1, a:hover #ch2, a:hover #ch3, a:hover #ch4, a:hover #ch5{
-      background-color: white;
-  }
-
-  a:hover .mapPointMessage{
-    display: inline;
 }
 
-  .mapPoint {
-    width: 20px;
-    height: 20px;
-    border-radius: 50%;
-    position:absolute
-  }
+#scrap{
+  padding: 20% 0 0 29%;
+}
 
-  .mapPointMessage{
-    display: none;
-    background-color: white;
-    border: 2px dashed black;
-    width: 20%;
-    text-align: center;
+.scrapText{
     position: absolute;
-  }
+    text-align: center;
+    margin: -15% 0 0 35%;
+    width: 30%;
+}
+
+#close{
+    float: right;
+}
+
+#close:hover{
+    cursor: pointer;
+}
+
+.mapPoints{
+  display: flex;
+  position: absolute;
+}
+
+a:hover #ch1, a:hover #ch2, a:hover #ch3, a:hover #ch4, a:hover #ch5{
+    background-color: white;
+}
+
+a:hover .mapPointMessage{
+  display: inline;
+}
+
+.mapPoint {
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  position:absolute
+}
+
+.mapPointMessage{
+  display: none;
+  background-color: white;
+  border: 2px dashed black;
+  width: 20%;
+  text-align: center;
+  position: absolute;
+}
 
 
-  #ch1, #ch1Message{
-    background-color: rgb(231, 175, 20);
-    top:72%;
-    left:20%
-  }
+#ch1, #ch1Message{
+  background-color: rgb(231, 175, 20);
+  top:72%;
+  left:20%
+}
 
-  #ch2, #ch2Message{
-    background-color: rgb(219, 165, 15) /*rgb(132, 210, 255)*/;
-    top:60.5%;
-    left:35%
+#ch2, #ch2Message{
+  background-color: rgb(219, 165, 15) /*rgb(132, 210, 255)*/;
+  top:60.5%;
+  left:35%
+    
+}
+#ch3, #ch3Message{
+  background-color: rgb(150, 130, 74)/*rgb(201, 201, 181);*/;
+  top:52.5%;
+  left:50%
       
-  }
-  #ch3, #ch3Message{
-    background-color: rgb(150, 130, 74)/*rgb(201, 201, 181);*/;
-    top:52.5%;
-    left:50%
-        
-  }
-  #ch4, #ch4Message{
-    background-color: rgb(163, 141, 81)/*rgb(171, 185, 177);*/;
-    top:42.5%;
-    left:65%
+}
+#ch4, #ch4Message{
+  background-color: rgb(163, 141, 81)/*rgb(171, 185, 177);*/;
+  top:42.5%;
+  left:65%
 
-  }
-  #ch5, #ch5Message{
-    background-color: rgb(163, 141, 81)/*rgb(177, 169, 171);*/;
-    top:18%;
-    left:80%
+}
+#ch5, #ch5Message{
+  background-color: rgb(163, 141, 81)/*rgb(177, 169, 171);*/;
+  top:18%;
+  left:80%
 }
 
 #ch1Message, #ch2Message, #ch3Message, #ch4Message, #ch5Message{
