--- a/css/game.css
+++ b/css/game.css
@@ -8,15 +8,21 @@ body{
     margin-right: auto;
   }
   
-#exit_button {
+#button-exit {
     position: absolute;
     opacity: 0.75;
     background-color: red;
+    border-radius: 5px;
+    padding: 5px;
     right: 20px;
     top: 20px;
-  }
 
-#exit_button:hover {
+    /* Override hyperlink format */
+    color: white;
+    text-decoration: none;
+}
+
+#button-exit:hover {
     opacity: 1;
 }
 
@@ -151,22 +157,22 @@ body{
     background-color: rgba(0,0,0,0.4);
   }
 
-  #scrap{
+#scrap{
     padding: 20% 0 0 29%;
-  }
+}
 
-  .scrapText{
-      position: absolute;
-      text-align: center;
-      /* bottom: 18%; */
-      margin: -15% 0 0 35%;
-      width: 30%;
-  }
-  
-  #close{
-      float: right;
-  }
+.scrapText{
+    position: absolute;
+    text-align: center;
+    /* bottom: 18%; */
+    margin: -15% 0 0 35%;
+    width: 30%;
+}
 
-  #close:hover{
-      cursor: pointer;
-  }
+#close{
+    float: right;
+}
+
+#close:hover{
+    cursor: pointer;
+}
