--- a/css/style.css
+++ b/css/style.css
@@ -129,7 +129,7 @@ nav li a:hover{
     margin-right: auto;
 }
 
-  #pages {
+#pages {
     display: flex;
     height: 100%;
     width: 100%;
@@ -168,20 +168,22 @@ nav li a:hover{
 }
 
 /* Navigation buttons */
-#pages button {
+#button-prev, #button-next, button {
     display: block;
     background-color: rgb(212, 219, 226);
     border-radius: 5px;
-    border: 0;
     padding: 10px;
-    width: 90px;
+    width: 75px;
     box-shadow: 2px 2px 5px grey;
+    text-align: center;
+
+    /* Override hyperlink formatting */
+    color: black;
+    text-decoration: none;
 }
 
-#pages button:hover{
-    cursor: pointer;
+#button-prev:hover, #button-next:hover {
     background-color: rgb(185, 197, 209);
-
 }
 
 #button-prev {
