--- a/css/game2.css
+++ b/css/game2.css
@@ -1,20 +1,23 @@
-#move {
+#movebutton {
     position : absolute;
     top: 10%;
     left: 30%;
     color: green;
+    background-color: lightgreen !important;
 }
 
-#stop {
+#stopbutton {
     position : absolute;
     top: 10%;
     left: 60%;
-    color: red;
+    color:rgb(0, 0, 0);
+    background-color:rgb(255, 0, 0) !important;
+    display: none !important;
 }
 
 #car {
-    width : 100px;
-    height : 100px;
+    width : 200px;
+    height : 200px;
     position : absolute;
     left: 10%;
     bottom: 20%;
@@ -31,6 +34,7 @@
     width: 20%;
     height: 15%;
     position: absolute;
+    z-index: 2;
     left: 40%;
     bottom: 48%;
     color: black;
@@ -52,3 +56,31 @@
     position: absolute;
     top: 15%;
 }
+
+#restart {
+    width: 20%;
+    height: 15%;
+    position: absolute;
+    z-index: 1;
+    left: 40%;
+    bottom: 48%;
+    color: black;
+    outline: 4px solid black;
+    text-align: center;
+    display: none;
+    background-color: rgba(218, 33, 33, 0.8);
+}
+
+#restart:hover {
+    outline: 3px dotted rgb(255, 0, 0);
+    background-color: rgb(255, 0, 0);
+}
+#restart_text {
+    display: block;
+    text-align: center;
+    color:black;
+    transform: translate(0, 50%);
+    position: absolute;
+    top: 15%;
+}
+
