--- a/css/style.css
+++ b/css/style.css
@@ -64,7 +64,7 @@ nav ul {
 nav li {
     display: block;
     float: left;
-    box-shadow: 1px -3px 4px #333;
+    box-shadow: 0px -2px 4px rgba(20, 20, 20, 0.5);
     z-index: 0;
 }
 
@@ -165,6 +165,15 @@ nav li a:hover{
     width: 92%;
     padding-left: 4%;
     padding-right: 4%;
+}
+
+#pages ul {
+    padding-left: 15px;
+}
+
+#pages li {
+    margin-top: 5px;
+    margin-bottom: 5px;
 }
 
 /* Navigation buttons */
