--- a/css/article2P2.css
+++ b/css/article2P2.css
@@ -1,28 +1,27 @@
-#scrapMessage {
-    position: fixed;
-    z-index: 1;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0,0,0,0.4);
-  }
-
-  #scrap{
-    padding: 20% 0 0 29%;
-  }
-
-  .scrapText{
-      position: absolute;
-      text-align: center;
-      margin: -15% 0 0 35%;
-      width: 30%;
-  }
-
-  #close{
-    float: right;
+#access_game{
+  opacity: 0.5;
+  padding: 10px;
+  position: absolute;
+  border: 2px solid white;
+  background-color:rgb(33, 45, 153);
 }
 
-  #close:hover{
-    cursor: pointer;
+#access_game_text {
+  text-align: center;
+  display: block;
+  color: white;
+}
+
+#access_game:hover {
+  opacity: 1;
+  outline: 5px dotted yellow;
+}
+
+#access_game:hover > #access_game_text {
+  font-weight: bold;
+}
+
+img{
+  width: 90%;
+  margin-left: 3%;
 }
