--- a/css/style.css
+++ b/css/style.css
@@ -166,7 +166,7 @@ nav li a:hover{
 
 #pagespread {
     display: inline-block;
-    height: 94%;
+    height: 91%; /* Don't know what's making 94% overflow */
     width: 92%;
     padding-left: 4%;
     padding-right: 4%;
