--- a/css/map.css
+++ b/css/map.css
@@ -124,3 +124,19 @@ a:hover .mapPointMessage{
 #pageSpread{
   position:relative;
 }
+
+.mapButton {
+  background-color: rgb(195, 204, 212);
+  border-radius: 5px;
+  padding: 10px;
+  width: 75px;
+  box-shadow: 2px 2px 5px grey;
+  text-align: center;
+  color: black;
+  text-decoration: none;
+  margin:6%;
+}
+
+.mapButton:hover {
+  background-color: rgb(173, 184, 196);
+}
