--- a/css/game2.css
+++ b/css/game2.css
@@ -101,3 +101,26 @@
     top: 15%;
 }
 
+#scrapMessage {
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.4);
+  }
+
+#scrap{
+    padding: 20% 0 0 29%;
+}
+
+.scrapText{
+    position: absolute;
+    text-align: center;
+    /* bottom: 18%; */
+    margin: -15% 0 0 35%;
+    width: 30%;
+}
+
+
