--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,7 @@ figcaption{
 
 
 body {
-    background-image: url("/images/desk-background.jpg");
+    background-image: url("/images/desk-background_planks.jpg");
     background-color: #b38050;
     background-size: cover;
     margin: 0;
