--- a/css/article1P2.css
+++ b/css/article1P2.css
@@ -1,9 +1,10 @@
 #access_game{
     opacity: 0.5;
-    padding: 10px;
+    padding: 30px 10px;
     position: absolute;
     border: 2px solid white;
-    background-color:rgb(33, 45, 153);
+    background-color:red;
+    margin-left: 10%;
 }
 
 #access_game_text {
@@ -28,4 +29,11 @@
 
 #distribution{
     display: flex;
+}
+
+.articleImage{
+    width: 90%;
+    padding: 10px;
+    box-shadow: 1px 1px 5px rgb(116, 116, 116);
+    background: #D6D7D6;
 }
