--- a/css/article2P2.css
+++ b/css/article2P2.css
@@ -1,9 +1,10 @@
 #access_game{
   opacity: 0.5;
-  padding: 10px;
+  padding: 25px 40px;
   position: absolute;
   border: 2px solid white;
-  background-color:rgb(33, 45, 153);
+  background-color:red;
+  margin-left: 10%;
 }
 
 #access_game_text {
@@ -21,7 +22,3 @@
   font-weight: bold;
 }
 
-img{
-  width: 90%;
-  margin-left: 3%;
-}
