--- a/css/quiz.css
+++ b/css/quiz.css
@@ -11,6 +11,14 @@
   color: black;
 }
 
+#papers-not-found{
+  background-color: red;
+  color: white;
+  padding: 10px 10px;
+  border: 2px solid white;
+  background-color:red;
+}
+
 #papers-not-found img {
   max-width: 120px;
   max-height: 120px;
@@ -19,7 +27,6 @@
 
 #papers-not-found.papersFound {
   display: none;
-
 }
 
 #quiz-form.papersFound {
