--- a/css/quiz.css
+++ b/css/quiz.css
@@ -4,11 +4,20 @@
 
 #get_cert{
   display: block;
-  width: 400px;
+  width: 200px;
   height: 50px;
-  border: blue solid;
-  background-color: turquoise;
-  color: black;
+  padding: 5px;
+  margin-left: 80px;
+  border: white;
+  background-color:red;
+  text-decoration: none;
+  color: white;
+  text-align: center;
+}
+
+#get_cert:hover {
+  opacity: 1;
+  outline: 5px dotted yellow;
 }
 
 #papers-not-found{
@@ -39,4 +48,19 @@
 
 #rightpage {
   overflow-y: auto;
+}
+
+input[type=submit]{
+  background-color: rgb(212, 219, 226);
+  border-radius: 5px;
+  border: none;
+  padding: 10px;
+  width: 75px;
+  box-shadow: 2px 2px 5px grey;
+  text-align: center;
+  margin-left: 30%;
+}
+
+input[type=submit]:hover {
+  background-color: rgb(185, 197, 209);
 }
