different red, darker bg pic, no background on diary front

--- a/css/article2P2.css
+++ b/css/article2P2.css
@@ -3,7 +3,7 @@
   padding: 25px 40px;
   position: absolute;
   border: 2px solid white;
-  background-color:red;
+  background-color:rgb(206, 42, 24);
   margin-left: 10%;
 }
 
