--- a/css/cert.css
+++ b/css/cert.css
@@ -1,7 +1,7 @@
 #exit_button {
     position: absolute;
     opacity: 0.75;
-    background-color: red;
+    background-color: rgb(206, 42, 24);
     right: 20px;
     top: 20px;
   }
