--- a/css/article1P2.css
+++ b/css/article1P2.css
@@ -1,10 +1,9 @@
 #access_game{
     opacity: 0.5;
-    padding: 30px 10px;
+    padding: 30px 5px;
     position: absolute;
     border: 2px solid white;
-    background-color:red;
-    margin-left: 10%;
+    background-color:rgb(206, 42, 24);
 }
 
 #access_game_text {
