--- a/css/game2.css
+++ b/css/game2.css
@@ -11,7 +11,7 @@
     top: 10%;
     left: 60%;
     color:rgb(0, 0, 0);
-    background-color:rgb(255, 0, 0) !important;
+    background-color:rgb(206, 42, 24) !important;
     display: none !important;
 }
 
@@ -26,7 +26,7 @@
 #button-exit {
     position: absolute;
     opacity: 0.75;
-    background-color: red;
+    background-color: rgb(206, 42, 24);
     border-radius: 5px;
     padding: 5px;
     right: 20px;
@@ -85,7 +85,7 @@
     outline: 4px solid black;
     text-align: center;
     display: none;
-    background-color: rgba(218, 33, 33, 0.8);
+    background-color: rgb(206, 42, 24);
 }
 
 #restart:hover {
