--- a/css/article1P3.css
+++ b/css/article1P3.css
@@ -7,7 +7,7 @@
 }
 
 .articleImage{
-    width: 90%;
+    width: 100%;
     padding: 10px;
     box-shadow: 1px 1px 5px rgb(116, 116, 116);
     background: #D6D7D6;
@@ -16,14 +16,22 @@
 .imgOverlay{
     background-color: white;
     opacity: 0.85;
+    display:none;
     font-size: 11px;
-    width: 290px;
-    height: 105px;
-    margin:-185px 0 0 20px ;
-    padding: 30px 10px;
-    display: none;
+    padding: 10px 10px;
+    position: absolute;
+    top: 20px;
+    bottom: 20px;
+    left: 20px;
+    right: 0px;
+
 }
 
 .articleImage:hover + .imgOverlay, .articleImage:hover{
-    display: block;
+    display:block;
 }
+
+.container {
+    position: relative;
+    width: 90%;
+  }
