appears over image

--- a/css/article1P1.css
+++ b/css/article1P1.css
@@ -19,8 +19,7 @@
 
 }
 
-
-.articleImage:hover + .imgOverlay, .articleImage:hover{
+.articleImage:hover + .imgOverlay, .imgOverlay:hover{
     display:block;
 }
 
