--- a/css/article1P3.css
+++ b/css/article1P3.css
@@ -27,7 +27,7 @@
 
 }
 
-.articleImage:hover + .imgOverlay, .articleImage:hover{
+.articleImage:hover + .imgOverlay, .imgOverlay:hover{
     display:block;
 }
 
