Proofreading, and fixes to some incorrect bolding.
It's broken the chapter completion message in map.php - please keep all
markup in HTML and not JavaScript.

--- a/css/style.css
+++ b/css/style.css
@@ -241,6 +241,16 @@ nav li a:hover{
     width: 30%;
 }
 
+/* Scrap close buttons */
+#close {
+    float: right;
+}
+
+#close:hover{
+    cursor: pointer;
+}
+
+
 /* Footer */
 
 mark{
