--- a/css/quiz.css
+++ b/css/quiz.css
@@ -1,23 +1,22 @@
-/*#win {
-
-}*/
-
-#get_cert{
+#get_cert {
   display: block;
-  width: 200px;
-  height: 50px;
-  padding: 5px;
-  margin-left: 80px;
+  width: 60%;
+  padding: 10px;
+  margin-left: 15%;
   border: white;
   background-color:rgb(206, 42, 24);
   text-decoration: none;
-  color: white;
   text-align: center;
+  opacity: 0.8;
+}
+
+#get_cert a {
+  color: white;
+  text-decoration: none;
 }
 
 #get_cert:hover {
   opacity: 1;
-  outline: 5px dotted yellow;
 }
 
 #papers-not-found{
