--- a/css/quiz.css
+++ b/css/quiz.css
@@ -56,7 +56,10 @@ input[type=submit]{
   width: 75px;
   box-shadow: 2px 2px 5px grey;
   text-align: center;
-  margin-left: 30%;
+
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 input[type=submit]:hover {
