--- a/css/abc-api.css
+++ b/css/abc-api.css
@@ -1,3 +1,17 @@
+.loading-spinner.hidden {
+    display: none;
+}
+
+.loading-spinner {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.gallery-images section.hidden {
+    display: none;
+}
+
 .gallery-images .record {
     position: relative; /* For positioning of 'absolute' child elements */
     padding: 10px;
