--- a/css/gallery.css
+++ b/css/gallery.css
@@ -27,6 +27,7 @@
     display: flex;
     flex-wrap: wrap;
     align-content: flex-start;
+    justify-content: space-around;
     height: 70%;
     overflow-y: auto;
 }
